welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: Missing closing brace `}' assumed here
while (esFaceMur()==false) {
^